[package]
name = "rocketblog"
version = "0.1.0"
authors = ["Elliot Snow-Kropla <esnowkropla@gmail.com>"]

[dependencies]
rocket = { version = "*", features = [ "tls" ] }
rocket_codegen = "*"
rocket_contrib = { version = "*", features = ["msgpack", "json", "tera_templates", "uuid"]}
r2d2 = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
chrono = { version = "*", features = ["serde"]}
rusqlite = "*"
postgres = "*"
bcrypt = "*"
uuid = { version = "*", features = ["serde", "v4"]}